# snappl

./: .buildinfo  .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.rst  api.html  changes.html  database_schema.html  developers.html  environment.html  genindex.html  index.html  installation.html  maintainers.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  usage.html
.doctrees/: api.doctree  changes.doctree  database_schema.doctree  developers.doctree  environment.doctree  index.doctree  installation.doctree  maintainers.doctree  usage.doctree
.github/: CODEOWNERS  dependabot.yml  labeler.yml
_modules/: index.html
_sources/: api.rst.txt  usage.rst.txt
_static/: documentation_options.js
api/: snappl.config.Config.html  snappl.config.NoValue.html  snappl.config.NotFoundValue.html  snappl.dbclient.SNPITDBClient.html  snappl.diaobject.DiaObject.html  snappl.diaobject.DiaObjectManual.html  snappl.diaobject.DiaObjectOU2024.html  snappl.http.retry_post.html  snappl.image.CompressedFITSImage.html  snappl.image.Exposure.html  snappl.image.FITSImage.html  snappl.image.FITSImageOnDisk.html  snappl.image.FITSImageStdHeaders.html  snappl.image.Image.html  snappl.image.ManualFITSImage.html  snappl.image.Numpy2DImage.html  snappl.image.OpenUniverse2024Exposure.html  snappl.image.OpenUniverse2024FITSImage.html  snappl.image.RomanDatamodelImage.html  snappl.image_simulator.ImageSimulationStar.html  snappl.image_simulator.ImageSimulator.html  snappl.image_simulator.ImageSimulatorImage.html  snappl.image_simulator.ImageSimulatorPointSource.html  snappl.image_simulator.ImageSimulatorStarCollection.html  snappl.image_simulator.ImageSimulatorStaticSource.html  snappl.image_simulator.ImageSimulatorTransient.html  snappl.imagecollection.ImageCollection.html  snappl.imagecollection.ImageCollectionDB.html  snappl.imagecollection.ImageCollectionManualFITS.html  snappl.imagecollection.ImageCollectionOU2024.html  snappl.lightcurve.Lightcurve.html  snappl.logger.SNLogger.html  snappl.pathedobject.PathedObject.html  snappl.provenance.Provenance.html  snappl.psf.A25ePSF.html  snappl.psf.OversampledImagePSF.html  snappl.psf.PSF.html  snappl.psf.STPSF.html  snappl.psf.YamlSerialized_OversampledImagePSF.html  snappl.psf.ou24PSF.html  (+17 more)
changes/: 11.snappl.rst  165.snappl.rst  167.feature.rst  172.bugfix.rst  174.snappl.rst  176.snappl.rst  177.feature.rst  178.snappl.rst  180.feature.rst  183.snappl.rst  184.snappl.rst  186.snappl  187.snappl.rst  188.snappl.rst  190.snappl.rst  191.snappl.rst  192.snappl.rst  193.docs.rst  194.bugfix.rst  200.feature.rst  201.snappl.rst  202.snappl.rst  204.bugfix.rst  205.snappl.rst  26.feature.rst  41.snappl.rst  47.feature.rst  71.feature.rst
docs/: conf.py  config.rst  database_schema.rst  developers.rst  environment.rst  index.rst  installation.rst  maintainers.rst  usage.rst
experimentation/: README.md  a25epsf_to_yaml.py  a25epsf_to_yaml_tree.py  (+1 more)
(+274 files in other folders)
